--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,10 +105,10 @@ nav{
     justify-content: space-between;
     padding: .8rem 1rem;
     background:#fff;
+    color:var(--veryDarkBlue);
     list-style: none;
     border-bottom: 2px solid var(--veryLightGrayish);
     order: 99;
-    
 }
 
 .show-completed{
@@ -135,7 +135,7 @@ nav{
    height: 20px;
    width: 20px;
    border-radius: 50%;
-   border: 2px solid var(--veryLightGrayish);
+   border: 1px solid var(--veryLightGrayish);
 }
 
 .check:checked{
@@ -143,7 +143,7 @@ nav{
 }
 
 .filter{
-    display: none;
+    display: flex;
     justify-content: space-between;
     position: relative;
     padding: 1rem;
